data/derived/comb/progs/unify/prog2083.ml.out
Characters 62-74:
  | _ -> bigAdd (mulByDigit i-1) l;;
                 ^^^^^^^^^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
